pods/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: jenkins-ingress
  namespace: ingress-nginx

spec:
  rules:
  - host: jenkins.bqrzzl.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
